Implementation of fine tuning per GPU
According to the submission of @AndreaLanfranchi

https://github.com/Cyclenerd/ethereum_nvidia_miner/pull/54

--- a/files/settings.conf
+++ b/files/settings.conf
@@ -1,18 +1,44 @@
-# Global Settings
-#
 # Edit this file using 'setup'.
+# NOTE: setup will change only GLOBAL values. Specific settings for single cards must be filled
+# filled in manually directly editing this file.
+#
+# Global Settings
 #
 # MY_ADDRESS : Your public ethereum address
 # MY_RIG     : Your mining rig name
-# MY_WATT    : Set power limit for all NVIDIA grafic cards.
-#              Input in watts (W). Allowed characters 0-9.
-#              Only on supported devices from Kepler family.
-# MY_CLOCK   : Set GPU graphics clock offset (GPUGraphicsClockOffset) for all NVIDIA grafic cards.
-#              Allowed characters 0-9 and -.
-# MY_MEM     : Set GPU memory transfer rate offset (GPUMemoryTransferRateOffset) for all NVIDIA grafic cards.
-#              Allowed characters 0-9.
-# MY_FAN     : Set GPU target fan speed (GPUTargetFanSpeed) for all NVIDIA grafic cards.
-#              Input in percent (%).
+#
+# Values for GPU(s)
+#
+# For each depicted variable you can set an OPTIONAL suffix made of _x (underscore x)
+# where x is the zero-based index of your GPU. When overclocking the procedure will firstly
+# look for GPU's specific value and, if not set, will apply the "generic" value.
+# 
+# MY_WATT<_x>    : Set power limit for all NVIDIA grafic cards.
+#                  Input in watts (W). Allowed characters 0-9.
+#                  Only on supported devices from Kepler family.
+# MY_CLOCK<_x>   : Set GPU graphics clock offset (GPUGraphicsClockOffset) for all NVIDIA grafic cards.
+#                  Allowed characters 0-9 and -.
+# MY_MEM<_x>     : Set GPU memory transfer rate offset (GPUMemoryTransferRateOffset) for all NVIDIA grafic cards.
+#                  Allowed characters 0-9.
+# MY_FAN<_x>     : Set GPU target fan speed (GPUTargetFanSpeed) for all NVIDIA grafic cards.
+#                  Input in percent (%).
+#
+# You can specify individual settings for each GPU in case you want to
+# fine tune your GPUs or if your rig is made up of mixed cards (eg 3x Gtx 1060 + 3x Gtx 1070).
+# Simply define a variable appending _x (underscore x) to the base variable name 
+# where x is the zero-based index of your GPU.
+#
+# Example
+#
+# Here we set specific values for clocks speed and memory speed on GPU 3 (index is zero based).
+# Fan speed and wattage are inherited by base values.
+# NOTE: This example is commented out thus not active.
+#
+#MY_CLOCK_2=155
+#MY_MEM_2=650 
+#
+# Following settings will be applied to ALL installed GPUs by the nvidia-overclock procedure.
+#
 MY_ADDRESS="0xfbbc9f870bccadf8847eba29b0ed3755e30c9f0d"
 MY_RIG="mine"
 MY_WATT="120"
